applications/java/MonoToMicroLegacy-a2c/kubernetesartifacts/eks_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: java-tomcat-b96247b3
  name: java-tomcat-b96247b3-ingress
  namespace: java-tomcat 
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-tomcat-b96247b3-service
            port:
              number: 8080
